# tokenomics

./: .gitignore  .gitlab-ci.yml  README.md  __init__.py  cli.py  hermes_plugin.py  plugin.yaml  pyproject.toml  tokenomics_cli.py
.github/workflows/: publish.yml
adapters/: hermes.py
recipes/: goose-tokenomics.yaml
tests/: test_hermes.py  test_hermes_plugin.py
tokenomics_core/: __init__.py  commands.py  finops.py  host_adapter.py  ledger.py  pricing.py  render.py  report.py  timeutil.py
tokenomics_core/adapters/: __init__.py  goose.py  hermes.py
