[project]
name = "tokenomics"
version = "0.1.0"
description = "Unified LLM-spend ingestion engine + FinOps — one ledger across OpenClaw, Zoder, Hermes, Goose."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tokenomics = "tokenomics_cli:main"

# Hermes (NousResearch/hermes-agent) plugin discovery. `pip install tokenomics`
# makes `hermes tokenomics` available; Hermes scans this entry-point group.
[project.entry-points."hermes_agent.plugins"]
tokenomics = "hermes_plugin"

[tool.setuptools]
packages = ["tokenomics_core", "tokenomics_core.adapters"]
py-modules = ["tokenomics_cli", "hermes_plugin"]
